--- a/src/components/button-group/button-group.scss
+++ b/src/components/button-group/button-group.scss
@@ -1,8 +1,10 @@
 .buttonGrid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    margin-top: 3rem;
-    gap: 3rem;
-    padding: 1rem;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 3rem 3rem;
+    margin: 0 auto;
+    gap: 2rem;
+    padding: 1rem 20%;
+    
 }
 
